# datadog-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.en.md  README.md  codecov.yml  install.sh  uninstall.sh
.claude/skills/datadog-query/: SKILL.md  examples.md  reference.md
.github/workflows/: ci.yml  release.yml
scripts/: install.sh  uninstall.sh
src/: config.rs  error.rs  lib.rs  main.rs  utils.rs
src/cli/: commands.rs  mod.rs  output.rs
src/datadog/: client.rs  models.rs  retry.rs
src/handlers/: common.rs  dashboards.rs  events.rs  hosts.rs  logs.rs  logs_aggregate.rs  logs_timeseries.rs  metrics.rs  mod.rs  monitors.rs  rum.rs  services.rs  spans.rs
