[package]
name = "datadog-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"
authors = ["Datadog CLI"]
description = "High-performance Datadog CLI"
license = "MIT"
repository = "https://github.com/junyeong-ai/datadog-cli"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
thiserror = "2.0.17"
chrono = { version = "0.4", features = ["serde"] }
interim = { version = "0.2", features = ["chrono_0_4"] }
toml = "0.8"
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5.51", features = ["derive"] }
comfy-table = "7.2.1"

[dev-dependencies]
wiremock = "0.6"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tokio-test = "0.4"
assert_matches = "1.5"
serial_test = "3.2"

[lib]
name = "datadog_cli"
path = "src/lib.rs"

[[bin]]
name = "datadog"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
