[package]
name = "datadog-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"
authors = ["Datadog CLI Contributors"]
description = "High-performance Datadog CLI with natural time parsing and observability tools"
license = "MIT"
repository = "https://github.com/junyeong-ai/datadog-cli"
homepage = "https://github.com/junyeong-ai/datadog-cli"
keywords = ["datadog", "cli", "observability", "monitoring", "apm"]
categories = ["command-line-utilities", "api-bindings", "development-tools::profiling"]
readme = "README.md"

[dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
interim = { version = "0.2", features = ["chrono_0_4"] }
toml = "0.8"
dirs = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7.2"

[dev-dependencies]
wiremock = "0.6"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tokio-test = "0.4"
assert_matches = "1.5"
serial_test = "3.2"

[lib]
name = "datadog_cli"
path = "src/lib.rs"

[[bin]]
name = "datadog-cli"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
